# docker-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/docker_kit/: cli.py
src/docker_kit/tools/: remove_orphans.py
tests/: test_cli.py  test_remove_orphans.py
